# cherub-dex

./: .env  .gitignore  Anchor.toml  Dockerfile  LICENSE  Makefile  README.md  copyIdl.js  package-lock.json  package.json
app/: package-lock.json  package.json
app/public/: index.html  logo.xcf  manifest.json
app/src/: App.css  App.js  accounts-devnet.json  accounts-localnet.json  accounts.json  dao.json  exchange.json  factory.json  idl.json  index.css  pyth.json
app/src/accounts/: localnet.json
app/src/idl/: exchange.json  factory.json  pyth.json
bots/: liquidate.js  mine.js  oracle.js  trade.js
docs/: CNAME  asset-manifest.json  docusaurus.config.js  index.html  package-lock.json  package.json
docs/docs/: dao.md  faq.md  home.md  inverse-perpetuals.md  roadmap.md
docs/docs/about/: history.md  introduction.md  terminology.md
docs/docs/protocol/: architecture.md  economics.md  equations.md  overview.md  tokenonomics.md
docs/docs/user-guide/: connect-wallet.md
docs/src/components/: HomepageFeatures.js
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
docs/static/css/: 2.2f47e252.chunk.css  2.2f47e252.chunk.css.map  2.5cc6782e.chunk.css  2.5cc6782e.chunk.css.map  main.1160f4ac.chunk.css  main.1160f4ac.chunk.css.map  main.2c664dbd.chunk.css  main.2c664dbd.chunk.css.map  main.380dac90.chunk.css  main.380dac90.chunk.css.map  main.438adc4e.chunk.css  main.438adc4e.chunk.css.map  main.69e492af.chunk.css  main.69e492af.chunk.css.map  main.6fe48762.chunk.css  main.6fe48762.chunk.css.map  main.71ba064d.chunk.css  main.71ba064d.chunk.css.map  main.826a8d05.chunk.css  main.826a8d05.chunk.css.map  main.96a14990.chunk.css  main.96a14990.chunk.css.map  (+8 more)
marketing/: package-lock.json  package.json
marketing/public/: index.html  manifest.json
marketing/src/: App.css  App.js
notebooks/: Charts.ipynb
programs/dao/: Cargo.toml
programs/dao/src/: lib.rs
programs/exchange/: Cargo.toml
programs/exchange/src/: lib.rs
programs/factory/: Cargo.toml
programs/factory/src/: lib.rs
programs/pyth/: Cargo.toml
programs/pyth/src/: lib.rs  utils.rs
sdk/: package.json
sdk/src/: index.js
tests/: cherub.js  cherub.spec.js  xv01.js
(+87 files in other folders)
