[package]
name = "dao"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
mainnet = []
testnet = []
devnet = []
localnet = []
default = ["devnet"]

[dependencies]
anchor-lang = "0.16.2"
anchor-spl = "0.16.2"
