[package]
name = "pyth"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
mainnet = []
testnet = []
devnet = []
localnet = []
default = ["devnet"]

[dependencies]
anchor-lang = "0.16.2"
arrayref = "0.3.6"
bytemuck = { version = "1.7.2" }
